refactor: remove test script
