# backend/docs/swagger.yaml
@@ -35,23 +35,6 @@ definitions:
         example: resident
         type: string
     type: object
-  internal_handlers_bot.issueTokenRequest:
-    properties:
-      phone:
-        type: string
-    required:
-    - phone
-    type: object
-  internal_handlers_bot.issueTokenResponse:
-    properties:
-      access_token:
-        type: string
-      expires_at:
-        type: string
-      role:
-        example: resident
-        type: string
-    type: object
   internal_handlers_common.DispatcherInfo:
     properties:
       houses_count:
@@ -1483,48 +1466,6 @@ paths:
       security:
       - InternalKey: []
       summary: Привязать max_user_id к пользователю по телефону
-      tags:
-      - internal
-  /internal/issue-token:
-    post:
-      consumes:
-      - application/json
-      description: Только для сервера бота/администратора, требует X-Internal-Key
-        вместо обычного JWT. Не для обычных пользователей.
-      operationId: botIssueToken
-      parameters:
-      - description: Телефон пользователя
-        in: body
-        name: body
-        required: true
-        schema:
-          $ref: '#/definitions/internal_handlers_bot.issueTokenRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/internal_handlers_bot.issueTokenResponse'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/apidoc.ErrorResponse'
-        "401":
-          description: неверный или отсутствующий X-Internal-Key
-          schema:
-            $ref: '#/definitions/apidoc.ErrorResponse'
-        "403":
-          description: 'code: inactive'
-          schema:
-            $ref: '#/definitions/apidoc.ErrorResponse'
-        "404":
-          description: 'code: phone_not_registered'
-          schema:
-            $ref: '#/definitions/apidoc.ErrorResponse'
-      security:
-      - InternalKey: []
-      summary: Выпустить JWT по телефону, минуя вход через MAX
       tags:
       - internal
   /me:
